dataset1235/2025-2/1153765216/users/1752965911/executions/3138746197_211162095.log
== RUN (2025-08-14 19:10:31)
-- CODE: 
print("Universidade Federal do Amazonas)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("Universidade Federal do Amazonas)
          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("Universidade Federal do Amazonas)
          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:10:51)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:10:53)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
